--- a/compiler/compiler.fsproj
+++ b/compiler/compiler.fsproj
@@ -5,6 +5,7 @@
     <NoWarn>NU1608</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Tokens.fs" />
     <Compile Include="JsonValue.fs" />
 
     <FsYacc Include="Parser.fsy">
@@ -13,7 +14,7 @@
     <Compile Include="Parser.fs" />
 
     <FsLex Include="Lexer.fsl">
-      <OtherFlags>--unicode</OtherFlags>
+      <OtherFlags>--module Lexer --unicode</OtherFlags>
     </FsLex>
     <Compile Include="Lexer.fs" />
 
