--- a/compiler/compiler.fsproj
+++ b/compiler/compiler.fsproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <NoWarn>NU1608</NoWarn>
+    <NoWarn>NU1608,NU1701</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Tokens.fs" />
@@ -22,5 +22,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FsLexYacc" Version="9.0.2" />
+    <PackageReference Include="LLVMSharp" Version="5.0.0" />
   </ItemGroup>
 </Project>
