--- a/compiler/compiler.fsproj
+++ b/compiler/compiler.fsproj
@@ -8,7 +8,7 @@
     <Compile Include="Tokens.fs" />
 
     <FsYacc Include="Parser.fsy">
-      <OtherFlags>--module Parser</OtherFlags>
+      <OtherFlags>-v --module Parser</OtherFlags>
     </FsYacc>
     <Compile Include="Parser.fs" />
 
