--- a/compiler.Tests/compiler.Tests.fsproj
+++ b/compiler.Tests/compiler.Tests.fsproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Compile Include="Evaluate.fs" />
     <Compile Include="ParserTest.fs" />
+    <Compile Include="SemanticTest.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="nunit" Version="3.11.0" />
