--- a/compiler/compiler.fsproj
+++ b/compiler/compiler.fsproj
@@ -2,14 +2,25 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <NoWarn>NU1608,NU1701</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Base.fs" />
     <Compile Include="ErrorHelper.fs" />
     <Compile Include="SymbolTable.fs" />
+    <Compile Include="CodeGenerator.fs" />
     <Compile Include="Semantic.fs" />
+
+    <FsYacc Include="Parser.fsy">
+      <OtherFlags>-v --module Parser</OtherFlags>
+    </FsYacc>
     <Compile Include="Parser.fs" />
+
+    <FsLex Include="Lexer.fsl">
+      <OtherFlags>--module Lexer --unicode</OtherFlags>
+    </FsLex>
     <Compile Include="Lexer.fs" />
+
     <Compile Include="Engine.fs" />
     <Compile Include="PCL.fs" />
   </ItemGroup>
